@@ -26,6 +26,7 @@ io
 iosh
 keystick
 lintini
+pumagui
 m5i20cfg
 mdi
 milltask
